src/test/ui/shadowed-type-parameter.stderr
error[E0194]: type parameter `T` shadows another type parameter of the same name
  --> $DIR/shadowed-type-parameter.rs:30:27
   |
27 | trait Bar<T> {
   |           - first `T` declared here
...
30 |     fn shadow_in_required<T>(&self);
   |                           ^ shadows another type parameter

error[E0194]: type parameter `T` shadows another type parameter of the same name
  --> $DIR/shadowed-type-parameter.rs:33:27
   |
27 | trait Bar<T> {
   |           - first `T` declared here
...
33 |     fn shadow_in_provided<T>(&self) {}
   |                           ^ shadows another type parameter

error[E0194]: type parameter `T` shadows another type parameter of the same name
  --> $DIR/shadowed-type-parameter.rs:18:25
   |
17 | impl<T> Foo<T> {
   |      - first `T` declared here
18 |     fn shadow_in_method<T>(&self) {}
   |                         ^ shadows another type parameter

error: aborting due to 3 previous errors

